feat: Small updates to notebooks (local)

--- a/docs/notebooks/local/01_infrastructure_setup.ipynb
+++ b/docs/notebooks/local/01_infrastructure_setup.ipynb
@@ -149,8 +149,7 @@
    "outputs": [],
    "source": [
     "# Clone a Git repository\n",
-    "# !git clone -b develop https://github.com/teamdatatonic/vertex-pipelines-end-to-end-samples\n",
-    "!git clone -b feat/tutorial_notebook https://github.com/teamdatatonic/vertex-pipelines-end-to-end-samples"
+    "!git clone -b develop https://github.com/teamdatatonic/vertex-pipelines-end-to-end-samples"
    ]
   },
   {
