--- a/docs/notebooks/local/03_infrastructure_cleanup.ipynb
+++ b/docs/notebooks/local/03_infrastructure_cleanup.ipynb
@@ -164,7 +164,7 @@
    },
    "outputs": [],
    "source": [
-    "PROJECT_ID = \"[my-project-id]\"  # @param {type:\"string\"}\n",
+    "PROJECT_ID = \"dt-donatas-sandbox-dev\"  # @param {type:\"string\"}\n",
     "# Set the project id\n",
     "! gcloud config set project {PROJECT_ID}"
    ]
@@ -341,6 +341,22 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Destroy infrastructure by executing undeploy command (terraform destroy):**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! make undeploy auto-approve=true"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "tags": []
    },
@@ -359,22 +375,6 @@
     "%%bash\n",
     "cd ..\n",
     "rm -r vertex-pipelines-end-to-end-samples"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Destroy infrastructure by executing undeploy command (terraform destroy):**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "! make undeploy auto-approve=true"
    ]
   },
   {
