--- a/docs/notebooks/local/pipelines.ipynb
+++ b/docs/notebooks/local/pipelines.ipynb
@@ -310,7 +310,7 @@
    },
    "outputs": [],
    "source": [
-    "PROJECT_ID = \"my-project-id\"  # @param {type:\"string\"}\n",
+    "PROJECT_ID = \"[my-project-id]\"  # @param {type:\"string\"}\n",
     "# Set the project id\n",
     "! gcloud config set project {PROJECT_ID}"
    ]
@@ -361,7 +361,7 @@
     "%%writefile .env\n",
     "\n",
     "VERTEX_LOCATION=europe-west2\n",
-    "VERTEX_PROJECT_ID=dt-donatas-sandbox-dev\n",
+    "VERTEX_PROJECT_ID=my-project-id\n",
     "\n",
     "# Suffix (e.g. '<your name>') to facilitate running concurrent pipelines in the same Google Cloud project. Change if working in a team to avoid overwriting resources during development \n",
     "RESOURCE_SUFFIX=default\n",
@@ -851,6 +851,22 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Destroy infrastructure by executing undeploy command (terraform destroy):**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! make undeploy auto-approve=true"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "tags": []
    },
@@ -869,22 +885,6 @@
     "%%bash\n",
     "cd ..\n",
     "rm -r vertex-pipelines-end-to-end-samples"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Destroy infrastructure by executing undeploy command (terraform destroy):**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "! make undeploy auto-approve=true"
    ]
   }
  ],
