--- a/docs/notebooks/workbench/01_infrastructure_setup.ipynb
+++ b/docs/notebooks/workbench/01_infrastructure_setup.ipynb
@@ -26,8 +26,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "JAPoU8Sm5E6e",
-    "tags": []
+    "id": "JAPoU8Sm5E6e"
    },
    "source": [
     "# Running Vertex Pipelines using E2E Samples repository - Infrastructure setup.\n",
@@ -36,11 +35,11 @@
     "<table align=\"left\">\n",
     "\n",
     "  <td>\n",
-    "    <a href=\"https://github.com/teamdatatonic/vertex-pipelines-end-to-end-samples/blob/develop/docs/notebooks/01_infrastructure_setup.ipynb\">\n",
-    "      <img src=\"https://cloud.google.com/ml-engine/images/github-logo-32px.png\" alt=\"GitHub logo\">\n",
-    "      View on GitHub\n",
+    "    <a href=\"https://console.cloud.google.com/vertex-ai/workbench/deploy-notebook?download_url=https://raw.githubusercontent.com/teamdatatonic/vertex-pipelines-end-to-end-samples/blob/develop/docs/notebooks/workbench/01_infrastructure_setup.ipynb\">\n",
+    "      <img src=\"https://lh3.googleusercontent.com/UiNooY4LUgW_oTvpsNhPpQzsstV5W8F7rYgxgGBD85cWJoLmrOzhVs_ksK_vgx40SHs7jCqkTkCk=e14-rj-sc0xffffff-h130-w32\" alt=\"Vertex AI logo\">\n",
+    "      Open in Vertex AI Workbench\n",
     "    </a>\n",
-    "  </td>                                                                                         \n",
+    "  </td>                                                                                               \n",
     "</table>"
    ]
   },
@@ -186,7 +185,48 @@
     "tags": []
    },
    "source": [
-    "**If you do not have terraform installed please please refer to the official documentation for detailed installation instructions: https://developer.hashicorp.com/terraform/downloads**"
+    "**Installing Terraform by downloading a pre-compiled binary.**\n",
+    "1. **Download** the appropriate package for your system as a zip archive from the Terraform website.\n",
+    "2. **Unzip** the downloaded package.\n",
+    "3. **Add Terraform to PATH**."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "mkdir temp\n",
+    "cd temp\n",
+    "curl -so terraform.zip https://releases.hashicorp.com/terraform/1.5.7/terraform_1.5.7_linux_amd64.zip\n",
+    "unzip terraform.zip > /dev/null && rm -f terraform.zip > /dev/null\n",
+    "mkdir $HOME/.bin\n",
+    "mv terraform $HOME/.bin > /dev/null\n",
+    "cd ..\n",
+    "rm -r temp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.environ['PATH'] += os.pathsep + os.path.join(os.environ['HOME'], '.bin')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! terraform -version"
    ]
   },
   {
@@ -251,18 +291,7 @@
     "### Authenticate your Google Cloud account\n",
     "\n",
     "\n",
-    "As you're running a Jupyter environment locally, you'll need to authenticate manually. Please follow the instructions provided below."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "! gcloud auth login"
+    "As you're running a Jupyter environment on workbench, you are already authenticated."
    ]
   },
   {
@@ -442,9 +471,9 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python (Local)",
    "language": "python",
-   "name": "python3"
+   "name": "local-base"
   },
   "language_info": {
    "codemirror_mode": {
@@ -456,7 +485,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.12"
   },
   "vscode": {
    "interpreter": {
