--- a/docs/notebooks/workbench/pipelines_workbench.ipynb
+++ b/docs/notebooks/workbench/pipelines_workbench.ipynb
@@ -37,35 +37,23 @@
     "<table align=\"left\">\n",
     "\n",
     "  <td>\n",
-    "    <a href=\"https://colab.research.google.com/github/teamdatatonic/vertex-pipelines-end-to-end-samples/blob/develop/examples/pipelines_colab.ipynb\">\n",
+    "    <a href=\"https://colab.research.google.com/github/teamdatatonic/vertex-pipelines-end-to-end-samples/blob/develop/docs/notebooks/workbench/pipelines_colab.ipynb\">\n",
     "      <img src=\"https://cloud.google.com/ml-engine/images/colab-logo-32px.png\" alt=\"Colab logo\"> Run in Colab\n",
     "    </a>\n",
     "  </td>\n",
     "  <td>\n",
-    "    <a href=\"https://github.com/teamdatatonic/vertex-pipelines-end-to-end-samples/blob/develop/examples/pipelines.ipynb\">\n",
+    "    <a href=\"https://github.com/teamdatatonic/vertex-pipelines-end-to-end-samples/blob/develop/docs/notebooks/workbench/pipelines.ipynb\">\n",
     "      <img src=\"https://cloud.google.com/ml-engine/images/github-logo-32px.png\" alt=\"GitHub logo\">\n",
     "      View on GitHub\n",
     "    </a>\n",
     "  </td>\n",
     "  <td>\n",
-    "    <a href=\"https://console.cloud.google.com/vertex-ai/workbench/deploy-notebook?download_url=https://raw.githubusercontent.com/teamdatatonic/vertex-pipelines-end-to-end-samples/blob/develop/examples/pipelines_workbench.ipynb\">\n",
+    "    <a href=\"https://console.cloud.google.com/vertex-ai/workbench/deploy-notebook?download_url=https://raw.githubusercontent.com/teamdatatonic/vertex-pipelines-end-to-end-samples/blob/develop/docs/notebooks/workbench/pipelines_workbench.ipynb\">\n",
     "      <img src=\"https://lh3.googleusercontent.com/UiNooY4LUgW_oTvpsNhPpQzsstV5W8F7rYgxgGBD85cWJoLmrOzhVs_ksK_vgx40SHs7jCqkTkCk=e14-rj-sc0xffffff-h130-w32\" alt=\"Vertex AI logo\">\n",
     "      Open in Vertex AI Workbench\n",
     "    </a>\n",
     "  </td>                                                                                               \n",
     "</table>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2f814278-15d7-4ab1-9f1f-2c027e99ad6e",
-   "metadata": {
-    "id": "24743cf4a1e1"
-   },
-   "source": [
-    "**_NOTE_**: This notebook has been tested in the following environment:\n",
-    "\n",
-    "* Python version = 3.9"
    ]
   },
   {
@@ -111,36 +99,6 @@
   {
    "cell_type": "markdown",
    "id": "f8fd9521-9fcc-4961-86e3-d43f3ae15d5e",
-   "metadata": {
-    "id": "08d289fa873f"
-   },
-   "source": [
-    "### Dataset\n",
-    "\n",
-    "Example ML training and predictions pipelines for scikit-learn/XGBoost will use the popular [Chicago Taxi Trips Dataset](https://console.cloud.google.com/bigquery?p=bigquery-public-data&d=chicago_taxi_trips&page=dataset). The dataset includes taxi trips from 2013 to the present, reported to the City of Chicago in its role as a regulatory agency.\n",
-    "\n",
-    "\n",
-    "This public dataset is hosted in Google BigQuery."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "dc0248c2-d658-47bc-8ccb-43f39b73700c",
-   "metadata": {
-    "id": "08d289fa873f"
-   },
-   "source": [
-    "### Dataset\n",
-    "\n",
-    "Example ML training and predictions pipelines for scikit-learn/XGBoost will use the popular [Chicago Taxi Trips Dataset](https://console.cloud.google.com/bigquery?p=bigquery-public-data&d=chicago_taxi_trips&page=dataset). The dataset includes taxi trips from 2013 to the present, reported to the City of Chicago in its role as a regulatory agency.\n",
-    "\n",
-    "\n",
-    "This public dataset is hosted in Google BigQuery."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cc563580-630b-46cd-8297-51f8ab620e8a",
    "metadata": {
     "id": "08d289fa873f"
    },
@@ -254,38 +212,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f37419b-7a30-44d6-ab16-8e69d952d944",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Install pyenv\n",
-    "!curl https://pyenv.run | bash"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "382725b5-80bf-4b76-ba58-553c7dd071e7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Add pyenv to PATH\n",
-    "import os\n",
-    "os.environ['PATH'] += os.pathsep + os.path.join(os.environ['HOME'], '.pyenv/bin')\n",
-    "\n",
-    "# Initialize pyenv\n",
-    "!eval \"$(pyenv init -)\"\n",
-    "!eval \"$(pyenv virtualenv-init -)\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "b4441b15-24ed-4b41-a434-9e7651c2a5b9",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Install poetry\n",
+    "import os\n",
     "!curl -sSL https://install.python-poetry.org | POETRY_HOME=$HOME/.poetry python3 -\n",
     "os.environ['PATH'] += os.pathsep + os.path.join(os.environ['HOME'], '.poetry/bin')\n",
     "!poetry --version"
@@ -301,12 +233,6 @@
    },
    "outputs": [],
    "source": [
-    "# Install the correct Python version\n",
-    "! pyenv install -skip-existing\n",
-    "\n",
-    "# configure poetry \n",
-    "! poetry config virtualenvs.prefer-active-python true\n",
-    "\n",
     "#Install poetry dependencies for ML pipelines\n",
     "! make install"
    ]
@@ -332,26 +258,6 @@
     "1. **Download** the appropriate package for your system as a zip archive from the Terraform website.\n",
     "2. **Unzip** the downloaded package.\n",
     "3. **Add Terraform to PATH**."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2ea4f3ac-f072-482d-aa3d-25e5ba21e3d9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!rm -r $HOME/.bin"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7de12dad-1907-4867-8b0d-bcdc115e815f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!ls"
    ]
   },
   {
@@ -445,9 +351,20 @@
     "id": "oM1iC_MfAts1",
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1;33mWARNING:\u001b[0m You do not appear to have access to project [[my-project-id]] or it does not exist.\n",
+      "Are you sure you wish to set property [core/project] to [my-project-id]?\n",
+      "\n",
+      "Do you want to continue (Y/n)?  "
+     ]
+    }
+   ],
    "source": [
-    "PROJECT_ID = \"my-project-id\"\n",
+    "PROJECT_ID = \"[my-project-id]\"\n",
     "# Set the project id\n",
     "! gcloud config set project {PROJECT_ID}"
    ]
@@ -1023,6 +940,29 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4aeb5933-65e7-46a4-a228-ac927510c117",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "**Destroy infrastructure by executing undeploy command (terraform destroy):**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c938e96-1139-4d84-abd8-a2fc5c10c35b",
+   "metadata": {
+    "id": "sx_vKniMq9ZX",
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "! make undeploy auto-approve=true"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cc67063a-337a-4517-9bd0-15f07d5bc5ee",
    "metadata": {
     "tags": []
@@ -1044,36 +984,13 @@
     "cd ..\n",
     "rm -r vertex-pipelines-end-to-end-samples"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4aeb5933-65e7-46a4-a228-ac927510c117",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "**Destroy infrastructure by executing undeploy command (terraform destroy):**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7c938e96-1139-4d84-abd8-a2fc5c10c35b",
-   "metadata": {
-    "id": "sx_vKniMq9ZX",
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "! make undeploy auto-approve=true"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "PySpark (Local)",
    "language": "python",
-   "name": "python3"
+   "name": "local-pyspark"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1085,7 +1002,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
