--- a/docs/notebooks/workbench/03_infrastructure_cleanup.ipynb
+++ b/docs/notebooks/workbench/03_infrastructure_cleanup.ipynb
@@ -33,13 +33,25 @@
     "\n",
     "\n",
     "<table align=\"left\">\n",
+    "\n",
     "  <td>\n",
-    "    <a href=\"https://github.com/teamdatatonic/vertex-pipelines-end-to-end-samples/blob/develop/docs/notebooks/03_infrastructure_cleanup.ipynb\">\n",
-    "      <img src=\"https://cloud.google.com/ml-engine/images/github-logo-32px.png\" alt=\"GitHub logo\">\n",
-    "      View on GitHub\n",
+    "    <a href=\"https://console.cloud.google.com/vertex-ai/workbench/deploy-notebook?download_url=https://raw.githubusercontent.com/teamdatatonic/vertex-pipelines-end-to-end-samples/blob/develop/docs/notebooks/workbench/03_infrastructure_cleanup.ipynb\">\n",
+    "      <img src=\"https://lh3.googleusercontent.com/UiNooY4LUgW_oTvpsNhPpQzsstV5W8F7rYgxgGBD85cWJoLmrOzhVs_ksK_vgx40SHs7jCqkTkCk=e14-rj-sc0xffffff-h130-w32\" alt=\"Vertex AI logo\">\n",
+    "      Open in Vertex AI Workbench\n",
     "    </a>\n",
-    "  </td>                                                                            \n",
+    "  </td>                                                                                               \n",
     "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "24743cf4a1e1"
+   },
+   "source": [
+    "**_NOTE_**: This notebook has been tested in the following environment:\n",
+    "\n",
+    "* Python version = 3.9"
    ]
   },
   {
@@ -147,7 +159,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "oM1iC_MfAts1",
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "PROJECT_ID = \"[my-project-id]\"  # @param {type:\"string\"}\n",
@@ -162,18 +177,7 @@
     "### Authenticate your Google Cloud account\n",
     "\n",
     "\n",
-    "Depending on your Jupyter environment, you may have to manually authenticate. Follow the relevant instructions below."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "! gcloud auth login"
+    "As you're running a Jupyter environment on workbench, you are already authenticated."
    ]
   },
   {
@@ -203,7 +207,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ! pip install python-dotenv"
+    "! pip install python-dotenv"
    ]
   },
   {
@@ -338,6 +342,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "os.environ['PATH'] += os.pathsep + os.path.join(os.environ['HOME'], '.bin')\n",
     "! make undeploy auto-approve=true"
    ]
   },
@@ -364,11 +370,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Congratulations on successfully destroying your infrastructure!"
+    "### Congratulations on successfully destroyed your infrastructure!"
    ]
   }
  ],
@@ -379,9 +384,9 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python (Local)",
    "language": "python",
-   "name": "python3"
+   "name": "local-base"
   },
   "language_info": {
    "codemirror_mode": {
@@ -393,11 +398,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.12"
   },
   "vscode": {
    "interpreter": {
-    "hash": "fd2d2b37aae7c0649f55b7e5d509b0b6c853821eea0be4d0f279f57c5531e1e5"
+    "hash": "bb5c7b0035bb37e2e2e56e6840dfdd8f7fa070884ae8e041fbcae450545b1006"
    }
   }
  },
