--- a/docs/notebooks/workbench/03_infrastructure_cleanup.ipynb
+++ b/docs/notebooks/workbench/03_infrastructure_cleanup.ipynb
@@ -370,10 +370,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Congratulations on successfully destroyed your infrastructure!"
+    "### Congratulations on successfully destroying your infrastructure!"
    ]
   }
  ],
@@ -384,9 +385,9 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "Python (Local)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "local-base"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -398,11 +399,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.5"
   },
   "vscode": {
    "interpreter": {
-    "hash": "bb5c7b0035bb37e2e2e56e6840dfdd8f7fa070884ae8e041fbcae450545b1006"
+    "hash": "fd2d2b37aae7c0649f55b7e5d509b0b6c853821eea0be4d0f279f57c5531e1e5"
    }
   }
  },
