Fix spelling in notebooks

--- a/docs/notebooks/01_infrastructure_setup.ipynb
+++ b/docs/notebooks/01_infrastructure_setup.ipynb
@@ -77,7 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "VERTEX_PROJECT_ID = \"dt-turbo-templates-dev\"\n",
+    "VERTEX_PROJECT_ID = \"my-project-id\"\n",
     "! gcloud auth login\n",
     "! gcloud config set project {VERTEX_PROJECT_ID}"
    ]
