--- a/docs/notebooks/02_run_pipelines.ipynb
+++ b/docs/notebooks/02_run_pipelines.ipynb
@@ -215,7 +215,7 @@
     "tags": []
    },
    "source": [
-    "You've successfully raun your first training and prediction pipeline in Vertex AI! 🎉\n",
+    "You've successfully run your first training and prediction pipeline in Vertex AI! 🎉\n",
     "Continue with [this notebook](./03_infrastructure_cleanup.ipynb) to run clean up the infrastructure."
    ]
   }
