Fix spelling in notebooks

--- a/docs/notebooks/02_run_pipelines.ipynb
+++ b/docs/notebooks/02_run_pipelines.ipynb
@@ -31,7 +31,7 @@
    "source": [
     "# Getting Started with Vertex AI Turbo Templates\n",
     "\n",
-    "This notebook sets up infrastructure to run production-ready pipelines on Google Cloud. Follow this three-part notebook series to get started in a local Jupter notebook or in [Vertex AI Workbench](https://cloud.google.com/vertex-ai-notebooks):\n",
+    "In this notebook you'll run your first production-ready training and prediction pipelines on Google Cloud. Follow this three-part notebook series to get started in a local Jupyter notebook or in [Vertex AI Workbench](https://cloud.google.com/vertex-ai-notebooks):\n",
     "\n",
     "1. [Infrastructure Setup](./02_run_pipelines.ipynb)\n",
     "1. **[Run Pipelines](./02_run_pipelines.ipynb) - this notebook**\n",
