--- a/docs/notebooks/01_infrastructure_setup.ipynb
+++ b/docs/notebooks/01_infrastructure_setup.ipynb
@@ -32,7 +32,7 @@
    "source": [
     "# Getting Started with Vertex AI Turbo Templates\n",
     "\n",
-    "This notebook sets up infrastructure to run production-ready pipelines on Google Cloud. Follow this three-part notebook series to get started in a local Jupter notebook or in [Vertex AI Workbench](https://cloud.google.com/vertex-ai-notebooks):\n",
+    "This notebook sets up infrastructure to run production-ready pipelines on Google Cloud. Follow this three-part notebook series to get started in a local Jupyter notebook or in [Vertex AI Workbench](https://cloud.google.com/vertex-ai-notebooks):\n",
     "\n",
     "1. **[Infrastructure Setup](./02_run_pipelines.ipynb) - this notebook**\n",
     "1. [Run Pipelines](./02_run_pipelines.ipynb)\n",
@@ -45,7 +45,7 @@
     "- Make\n",
     "- [Terraform](https://www.terraform.io)\n",
     "\n",
-    "**For Vertex AI Workbench users**: Uncomment and execute the following cell install Terraform."
+    "**For Vertex AI Workbench users**: Uncomment and execute the following cell to install Terraform."
    ]
   },
   {
