Fix spelling in notebooks

--- a/docs/notebooks/02_run_pipelines.ipynb
+++ b/docs/notebooks/02_run_pipelines.ipynb
@@ -182,7 +182,7 @@
    "source": [
     "## Run Prediction Pipeline\n",
     "\n",
-    "After successful training job, run the prediction pipeline which will look similar to:\n",
+    "After running a successful training pipeline job, run the prediction pipeline which will look similar to:\n",
     "\n",
     "<img src=\"../images/prediction_pipeline.png\" alt=\"image\" width=\"500\" height=\"auto\">"
    ]
