Make repo cloning optional in notebooks

--- a/docs/notebooks/01_infrastructure_setup.ipynb
+++ b/docs/notebooks/01_infrastructure_setup.ipynb
@@ -86,7 +86,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Clone Code"
+    "## Clone Code\n",
+    "\n",
+    "**If you haven't cloned the template, yet:** Uncomment and execute the following cell to clone the code."
    ]
   },
   {
@@ -95,7 +97,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! git clone -b develop https://github.com/teamdatatonic/vertex-pipelines-end-to-end-samples"
+    "#! git clone -b develop https://github.com/teamdatatonic/vertex-pipelines-end-to-end-samples"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Switch to the folder in which the template code is cloned to:"
    ]
   },
   {
