Minor improvements to notebook

--- a/docs/notebooks/extras/01_hyperparameter_tuning.ipynb
+++ b/docs/notebooks/extras/01_hyperparameter_tuning.ipynb
@@ -29,7 +29,7 @@
    "source": [
     "# Hyperparameter Tuning with Vertex AI Turbo Templates\n",
     "\n",
-    "This notebook guides you through production-ready pipelines on Google Cloud with hyperparameter tuning enabled. \n",
+    "This notebook guides you through production-ready pipelines on Google Cloud and how to enable hyperparameter tuning in your training pipeline. \n",
     "If you're new to the Vertex AI Turbo Template, start with the [three-part notebook series](../01_infrastructure_setup.ipynb) first. \n",
     "\n",
     "**Prerequisites:**\n",
@@ -56,6 +56,12 @@
    "metadata": {},
    "source": [
     "## Model training\n",
+    "\n",
+    "Start by updating the model training code and it's dependencies by:\n",
+    "\n",
+    "- updating your Python dependencies\n",
+    "- extending your training code\n",
+    "- reporting evaluation metrics for each training trial\n",
     "\n",
     "**Update Python dependencies:** Add the following line to `model/pyproject.toml` to install (cloudml-hypertune)[https://github.com/GoogleCloudPlatform/cloudml-hypertune] as part of your model training code:"
    ]
@@ -114,7 +120,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Training pipeline"
+    "## Training pipeline\n",
+    "\n",
+    "Since your training code is updated now, let's navigate to the training pipeline and start adapting to train multiple models concurrently with different hyperparameters while optimising your primary evaluation metric. \n",
+    "This is done by:\n",
+    "\n",
+    "- adding new Python imports\n",
+    "- implementing new pipeline components\n",
+    "- replacing the training operation with a new set of component operations"
    ]
   },
   {
