Minor improvements to notebook

--- a/docs/notebooks/extras/01_hyperparameter_tuning.ipynb
+++ b/docs/notebooks/extras/01_hyperparameter_tuning.ipynb
@@ -63,7 +63,7 @@
     "- extending your training code\n",
     "- reporting evaluation metrics for each training trial\n",
     "\n",
-    "**Update Python dependencies:** Add the following line to `model/pyproject.toml` to install (cloudml-hypertune)[https://github.com/GoogleCloudPlatform/cloudml-hypertune] as part of your model training code:"
+    "**Update Python dependencies:** Add the following line to `model/pyproject.toml` to install [cloudml-hypertune](https://github.com/GoogleCloudPlatform/cloudml-hypertune) as part of your model training code:"
    ]
   },
   {
@@ -79,8 +79,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Extend training code:** Add hyperparameters which require tuning to the expected command-line arguments `model/training/train.py`.\n",
-    "In this example we're adding the `learning_rate` hyperparamter:"
+    "**Extend training code:** Add hyperparameters which require tuning to the expected command-line arguments in `model/training/train.py`.\n",
+    "In this example we're adding the `learning_rate` hyperparameter:"
    ]
   },
   {
@@ -112,7 +112,7 @@
     "hpt = hypertune.HyperTune()\n",
     "hpt.report_hyperparameter_tuning_metric(\n",
     "    hyperparameter_metric_tag=\"rootMeanSquaredError\",\n",
-    "    metric_value=hp_metric,\n",
+    "    metric_value=calculated_metric,\n",
     ")"
    ]
   },
@@ -122,7 +122,8 @@
    "source": [
     "## Training pipeline\n",
     "\n",
-    "Since your training code is updated now, let's navigate to the training pipeline and start adapting to train multiple models concurrently with different hyperparameters while optimising your primary evaluation metric. \n",
+    "Since your training code is updated now, let's navigate to the training pipeline and adapt it. \n",
+    "You'll train multiple models concurrently with different hyperparameters while optimising for your primary evaluation metric. \n",
     "This is done by:\n",
     "\n",
     "- adding new Python imports\n",
@@ -313,7 +314,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Training pipeline:** In the  define new variables and use the just implemented components by replacing the initial `train` component:"
+    "**Training pipeline:** In the training pipeline define new variables and replace the original training component with the newly implemented components."
    ]
   },
   {
