Update docs and add new make commands

--- a/docs/notebooks/02_run_pipelines.ipynb
+++ b/docs/notebooks/02_run_pipelines.ipynb
@@ -159,7 +159,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! make run pipeline=training wait=true"
+    "! make training wait=true"
    ]
   },
   {
@@ -193,7 +193,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! make run pipeline=prediction build=false"
+    "! make prediction build=false"
    ]
   },
   {
@@ -202,9 +202,9 @@
     "tags": []
    },
    "source": [
-    "**Note:** The `make run` command has the following true/false flags:\n",
+    "**Note:** The command has the following true/false flags:\n",
     "\n",
-    "- `build` - re-build containers for training & serving code (limit by setting `targets=training` to build only one of the containers)\n",
+    "- `build` - re-build containers for training & serving code (limit by setting `images=training` to build only one of the containers)\n",
     "- `compile` - re-compile the pipeline to YAML\n",
     "- `wait` - run the pipeline (a-)sync"
    ]
