--- a/docs/notebooks/extras/01_hyperparameter_tuning.ipynb
+++ b/docs/notebooks/extras/01_hyperparameter_tuning.ipynb
@@ -400,7 +400,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! make run pipeline=training build=true targets=training"
+    "! make training"
    ]
   },
   {
