--- a/docs/notebooks/02_run_pipelines.ipynb
+++ b/docs/notebooks/02_run_pipelines.ipynb
@@ -193,7 +193,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! make prediction build=false"
+    "! make prediction"
    ]
   },
   {
