--- a/docs/notebooks/01_infrastructure_setup.ipynb
+++ b/docs/notebooks/01_infrastructure_setup.ipynb
@@ -45,7 +45,10 @@
     "- Make\n",
     "- [Terraform](https://www.terraform.io)\n",
     "\n",
-    "**For Vertex AI Workbench users**: Uncomment and execute the following cell to install Terraform."
+    "**For Vertex AI Workbench users**: \n",
+    "Uncomment and execute the following cell to install Terraform.\n",
+    "Restart the notebook kernel or the Workbench instance to ensure `terraform` is available in the `PATH`.\n",
+    "Then return to this notebook and continue with the next section."
    ]
   },
   {
@@ -63,12 +66,7 @@
    "source": [
     "## Authenticate\n",
     "\n",
-    "#### Set your project ID\n",
-    "\n",
-    "**If you don't know your project ID**, try the following:\n",
-    "* Run `gcloud config list`.\n",
-    "* Run `gcloud projects list`.\n",
-    "* See the support page: [Locate the project ID](https://support.google.com/googleapi/answer/7014113)"
+    "Set your project ID and authenticate using your Google Account:"
    ]
   },
   {
@@ -78,8 +76,10 @@
    "outputs": [],
    "source": [
     "VERTEX_PROJECT_ID = \"my-project-id\"\n",
-    "! gcloud auth login\n",
-    "! gcloud config set project {VERTEX_PROJECT_ID}"
+    "GOOGLE_ACCOUNT = \"user@company.com\"\n",
+    "! gcloud config set project {VERTEX_PROJECT_ID}\n",
+    "! gcloud config set account {GOOGLE_ACCOUNT}\n",
+    "! gcloud auth login"
    ]
   },
   {
@@ -123,6 +123,7 @@
     "Configure your code by setting the variables:\n",
     "- `VERTEX_PROJECT_ID` - as set above\n",
     "- `VERTEX_LOCATION` - location of the cloud project\n",
+    "- `BQ_LOCATION` - location of the BigQuery dataset, for this notebook example you can leave this as-is\n",
     "- `RESOURCE_SUFFIX` - suffix (e.g. `<your name>`) to facilitate running concurrent pipelines in the same Google Cloud project. Change if working in a team to avoid overwriting resources during development "
    ]
   },
@@ -134,10 +135,11 @@
    },
    "outputs": [],
    "source": [
-    "%%writefile .env.sh\n",
+    "%%writefile env.sh\n",
     "#!/bin/bash\n",
     "VERTEX_PROJECT_ID=my-project-id\n",
     "VERTEX_LOCATION=europe-west2\n",
+    "BQ_LOCATION=US\n",
     "RESOURCE_SUFFIX=default"
    ]
   },
@@ -154,7 +156,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%writefile -a .env.sh\n",
+    "%%writefile -a env.sh\n",
     "# Optional\n",
     "VERTEX_CMEK_IDENTIFIER=\n",
     "VERTEX_NETWORK=\n",
@@ -221,7 +223,7 @@
    },
    "outputs": [],
    "source": [
-    "! source .env.sh && gsutil mb -l $VERTEX_LOCATION -p $VERTEX_PROJECT_ID gs://$VERTEX_PROJECT_ID-tfstate"
+    "! source env.sh && gsutil mb -l $VERTEX_LOCATION -p $VERTEX_PROJECT_ID gs://$VERTEX_PROJECT_ID-tfstate"
    ]
   },
   {
@@ -251,7 +253,9 @@
     "You've successfully deployed a `dev` environment! 🎉 \n",
     "Continue with [this notebook](./02_run_pipelines.ipynb) to run your first Vertex AI Pipelines in the deployed project.\n",
     "\n",
-    "**Note:** If you'd like to deploy separate cloud environments as shown below, try out `make deploy env=dev` where you can replace `dev` with `test` or `prod`."
+    "**Note:** If you'd like to deploy separate cloud environments as shown below, try out `make deploy env=dev` where you can replace `dev` with `test` or `prod`.\n",
+    "\n",
+    "**Troubleshooting:** If enabling of APIs or the deployment fails, check whether your Google user account has the appropriate permissions."
    ]
   }
  ],
