--- a/docs/notebooks/02_run_pipelines.ipynb
+++ b/docs/notebooks/02_run_pipelines.ipynb
@@ -47,7 +47,10 @@
     "- [Poetry](https://python-poetry.org)\n",
     "- [pyenv](https://github.com/pyenv/pyenv)\n",
     "\n",
-    "**For Vertex AI Workbench users**: Uncomment and execute the following cell install Poetry."
+    "**For Vertex AI Workbench users**: \n",
+    "Uncomment and execute the following cell install pyenv and Poetry.\n",
+    "Restart the notebook kernel or the Workbench instance to ensure `pyenv` and `poetry` are available in the `PATH`.\n",
+    "Then return to this notebook and continue with the next section."
    ]
   },
   {
@@ -56,6 +59,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# ! curl https://pyenv.run | bash\n",
     "# ! bash ./scripts/install_poetry.sh"
    ]
   },
@@ -65,12 +69,7 @@
    "source": [
     "## Authenticate\n",
     "\n",
-    "#### Set your project ID\n",
-    "\n",
-    "**If you don't know your project ID**, try the following:\n",
-    "* Run `gcloud config list`.\n",
-    "* Run `gcloud projects list`.\n",
-    "* See the support page: [Locate the project ID](https://support.google.com/googleapi/answer/7014113)"
+    "Set your project ID and authenticate using your Google Account:"
    ]
   },
   {
@@ -80,8 +79,10 @@
    "outputs": [],
    "source": [
     "VERTEX_PROJECT_ID = \"my-project-id\"\n",
-    "! gcloud auth login\n",
-    "! gcloud config set project {VERTEX_PROJECT_ID}"
+    "GOOGLE_ACCOUNT = \"user@company.com\"\n",
+    "! gcloud config set project {VERTEX_PROJECT_ID}\n",
+    "! gcloud config set account {GOOGLE_ACCOUNT}\n",
+    "! gcloud auth login"
    ]
   },
   {
@@ -170,7 +171,7 @@
     "\n",
     "**1. Compile the pipeline:** By using the KubeFlow SDK, you've compiled the training pipeline in `pipelines/training` to YAML.\n",
     "\n",
-    "**2. Build dependent Docker containers:** In `model` you can maintain your training (and serving) code which is containerised and pushed to [Artifact Registry](https://cloud.google.com/artifact-registry). \n",
+    "**2. Build dependent Docker containers:** In `model` you can maintain your training (and prediction) code which is containerised and pushed to [Artifact Registry](https://cloud.google.com/artifact-registry). \n",
     "In this way, your training pipeline can execute your training code in the `Train model` pipeline step.\n",
     "\n",
     "**3. Run the pipeline in Vertex AI:** By using the Vertex AI Python SDK and the pipeline YAML file, you execute your training pipeline."
@@ -204,7 +205,7 @@
    "source": [
     "**Note:** The command has the following true/false flags:\n",
     "\n",
-    "- `build` - re-build containers for training & serving code (limit by setting `images=training` to build only one of the containers)\n",
+    "- `build` - re-build containers for training & prediction code (limit by setting `images=training` to build only one of the containers)\n",
     "- `compile` - re-compile the pipeline to YAML\n",
     "- `wait` - run the pipeline (a-)sync"
    ]
