--- a/docs/notebooks/03_infrastructure_cleanup.ipynb
+++ b/docs/notebooks/03_infrastructure_cleanup.ipynb
@@ -54,12 +54,7 @@
    "source": [
     "## Authenticate\n",
     "\n",
-    "#### Set your project ID\n",
-    "\n",
-    "**If you don't know your project ID**, try the following:\n",
-    "* Run `gcloud config list`.\n",
-    "* Run `gcloud projects list`.\n",
-    "* See the support page: [Locate the project ID](https://support.google.com/googleapi/answer/7014113)"
+    "Set your project ID and authenticate using your Google Account:"
    ]
   },
   {
@@ -69,8 +64,10 @@
    "outputs": [],
    "source": [
     "VERTEX_PROJECT_ID = \"my-project-id\"\n",
-    "! gcloud auth login\n",
-    "! gcloud config set project {VERTEX_PROJECT_ID}"
+    "GOOGLE_ACCOUNT = \"user@company.com\"\n",
+    "! gcloud config set project {VERTEX_PROJECT_ID}\n",
+    "! gcloud config set account {GOOGLE_ACCOUNT}\n",
+    "! gcloud auth login"
    ]
   },
   {
@@ -133,7 +130,7 @@
    },
    "outputs": [],
    "source": [
-    "! bq --location=${VERTEX_LOCATION} rm -f -r --dataset \"${VERTEX_PROJECT_ID}:preprocessing\" "
+    "! bq --location=${VERTEX_LOCATION} rm -f -r --dataset \"${VERTEX_PROJECT_ID}:turbo_templates\" "
    ]
   },
   {
@@ -161,7 +158,7 @@
     "This is the end of the three-part notebook series.\n",
     "\n",
     "**Now it's time to adapt the template to your own use case.** \n",
-    "You can start by updating the training and serving code in `model` folder. "
+    "You can start by updating the training and prediction code in `model` folder. "
    ]
   }
  ],
